--- a/todoapp/tasks/templates/tasks/delete.html
+++ b/todoapp/tasks/templates/tasks/delete.html
@@ -1,8 +1,85 @@
-<p>Are you sure you want to delete "{{item}}"?</p>
 
-<a href="{% url 'list' %}">Cancel</a>
+<link rel="stylesheet" 
+href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+crossorigin="anonymous">
 
-<form method="POST" action="">
-    {% csrf_token %}
-    <input type="submit" name="Confirm">
-</form>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/south-street/jquery-ui.min.css" integrity="sha256-/8xGgcV6Mp9fFa2u2lLYOWYNluCdrHEvBfiwhpkD/Js=" crossorigin="anonymous" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/south-street/theme.min.css" integrity="sha256-j5WK5GB3+w3i2jRf0bV9dkjJ+mm+TiSEG6WgNiD+gWk=" crossorigin="anonymous" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.structure.min.css" integrity="sha256-rxais37anKUnpL5QzSYte+JnIsmkGmLG+ZhKSkZkwVM=" crossorigin="anonymous" />
+
+<style>
+	body{
+		background-color: #494949;
+	}
+	input{
+		width: 100%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+	}
+	input::placeholder {
+	  color: #d3d3d3;
+	}
+	.submit{
+		background-color: #6BA3E8;
+	}
+	.center-column{
+		width:600px;
+		margin: 20px auto;
+		padding:20px;
+		background-color: rgb(46, 46, 46);
+		border-radius: 3px;
+		box-shadow: 6px 2px 30px 0px rgba(255, 255, 255, 0.75);
+	}
+	.item-row{
+        width:600px;
+		background-color: #000000;
+		margin: auto;
+		padding: 20px;
+		border-radius: 3px;
+		color: rgb(255, 255, 255);
+		font-size: 16px;
+		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+		text-align: center;
+	}
+	.item-row-completed{
+		background-color: #1ebb38;
+		margin: 10px;
+		padding: 20px;
+		border-radius: 3px;
+		color: rgb(255, 255, 255);
+		font-size: 16px;
+		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+		text-align: center;
+	}
+	.btn-danger{
+		background-color: #ffae19;
+		border-color: #e59400;
+	}
+	.button-right {
+		float: right;
+	}
+</style>
+
+
+<div class = center_column>
+
+    
+
+    <div class=item-row>
+        <h5>Are you sure you want to delete "{{item}}"?</h5>
+
+        <a class="btn btn-sm btn-info" href="{% url 'list' %}">Cancel</a>
+
+        <form method="POST" action="">
+            {% csrf_token %}
+            <input type="submit" name="Confirm" value="Confirm">
+        </form>
+        
+    </div>
+</div>
