--- a/todoapp/tasks/templates/tasks/list.html
+++ b/todoapp/tasks/templates/tasks/list.html
@@ -3,6 +3,15 @@
 href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
 crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/south-street/jquery-ui.min.css" integrity="sha256-/8xGgcV6Mp9fFa2u2lLYOWYNluCdrHEvBfiwhpkD/Js=" crossorigin="anonymous" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/south-street/theme.min.css" integrity="sha256-j5WK5GB3+w3i2jRf0bV9dkjJ+mm+TiSEG6WgNiD+gWk=" crossorigin="anonymous" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.structure.min.css" integrity="sha256-rxais37anKUnpL5QzSYte+JnIsmkGmLG+ZhKSkZkwVM=" crossorigin="anonymous" />
+
 <style>
 	body{
 		background-color: #494949;
@@ -54,23 +63,39 @@ crossorigin="anonymous">
 	.button-right {
 		float: right;
 	}
+	.timer{
+	background-color: #1fcbff;
+	border-radius: 5px;
+	padding: 5px;
+	}
+
 </style>
+
+<script
+  src="https://code.jquery.com/jquery-3.5.0.min.js"
+  integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+  crossorigin="anonymous">
+  </script>
+
+<script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+  crossorigin="anonymous">
+</script>
 
 <div class="center-column">
 
     <form method="POST" action ="/">
         {% csrf_token %}
-        {{form.title}}
+        {{form}}
         <input class="btn btn-info" type="submit" name="Create Task" value="Add task"> 
     </form>
 
     <div class="todo-list">
-
     {%for task in tasks%}
-
-		{% if task.complete == True %}
+		{% if task.complete == True or task.is_end_date%}
         <div class="item-row-completed">
-            <strike>{{task}}</strike>
+            <strike>{{task}}, {{task.end_date}}</strike>
 			<span class="button-right">
 				<a class="btn btn-sm btn-info" href="{% url 'update_task' task.id %}">Update</a>
 				<a class="btn btn-sm btn-danger" href="{% url 'delete' task.id %}">Delete</a>
@@ -78,15 +103,24 @@ crossorigin="anonymous">
         </div>  {% else %} 
 			<div class="item-row">
             <span>{{task}}</span>
+			<span style="float: left;" class="timer"><b>Due:</b> {{ task.end_date|timeuntil }}</span>
 			<span class="button-right">
 				<a class="btn btn-sm btn-info" href="{% url 'update_task' task.id %}">Update</a>
 				<a class="btn btn-sm btn-danger" href="{% url 'delete' task.id %}">Delete</a>
 			</span>
 		</div>
             {% endif %}
-
-			
-        
     {%endfor%}
     </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+      var date_input=$('input[name="end_date"]');
+      var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
+      var options={
+        dateFormat: 'yy-mm-dd',
+      };
+      date_input.datepicker(options);
+    })
+</script>
